syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.one";
option java_outer_classname = "GreetingServiceOneProto";

package greetingone;

service GreetingServiceOne {
  rpc sayHi (GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string greeting = 1;
}
